--- a/Klasifikasi dan prediksi dengan Naive Bayes.ipynb
+++ b/Klasifikasi dan prediksi dengan Naive Bayes.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sentiment_indexer = StringIndexer(inputCol=\"sentiment\", outputCol=\"label\")"
+    "Gunakan pengindeksan string untuk mengkonversi hasil sentimen ke tipe integer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----------+\n",
+      "|label|prediction|\n",
+      "+-----+----------+\n",
+      "|  1.0|       1.0|\n",
+      "|  1.0|       0.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  1.0|       0.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  1.0|       1.0|\n",
+      "|  1.0|       1.0|\n",
+      "|  1.0|       0.0|\n",
+      "|  1.0|       1.0|\n",
+      "|  1.0|       1.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  1.0|       1.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  0.0|       1.0|\n",
+      "|  1.0|       0.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  0.0|       0.0|\n",
+      "|  1.0|       0.0|\n",
+      "|  0.0|       1.0|\n",
+      "|  0.0|       0.0|\n",
+      "+-----+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Membuat Prediksi \n",
     "predictions = model.transform(test_set).select(col(\"label\"), col(\"prediction\"))\n",
@@ -79,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8617343844754397"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Gunakan Evaluator untuk mengukur performa dari model yang dibangun\n",
     "evaluator = MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
@@ -90,14 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4092.,  636.],\n",
+       "       [ 732., 4434.]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Tampilkan confusion matrix\n",
     "metrics = MulticlassMetrics(predictions.rdd)\n",
     "metrics.confusionMatrix().toArray()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
